--- a/client/bower.json
+++ b/client/bower.json
@@ -4,7 +4,7 @@
   "description": "An automated band application and voting platform",
   "homepage": "https://github.com/dennisausbremen/tunefish",
   "authors": [
-    "Dennis Gieseler <dennis.gieseler@hmmh.de>"
+    "Dennis Gieseler <dennis.gieseler@me.com>"
   ],
   "moduleType": [
     "es6",
@@ -19,9 +19,6 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
-    "ractive": "~0.5.7",
-    "ractive-load": "~0.3.2",
-    "page.js": "~1.3.7"
+    "jquery": "~2.1.1"
   }
 }
