--- a/settings.py.example
+++ b/settings.py.example
@@ -4,5 +4,6 @@ SETTINGS = {
     'MAIL_PORT': 587,
     'MAIL_USE_TLS': True,
     'MAIL_USERNAME': '',
-    'MAIL_PASSWORD': ''
+    'MAIL_PASSWORD': '',
+    'UPLOADED_TRACKPOOL_DEST': 'uploads/tracks'
 }
