--- a/settings.py.example
+++ b/settings.py.example
@@ -5,5 +5,7 @@ SETTINGS = {
     'MAIL_USE_TLS': True,
     'MAIL_USERNAME': '',
     'MAIL_PASSWORD': '',
-    'UPLOADED_TRACKPOOL_DEST': 'uploads/tracks'
+    'UPLOADED_TRACKPOOL_DEST': 'uploads/tracks',
+    'UPLOADED_IMAGES_DEST': 'uploads/images',
+    'UPLOADED_TECHRIDER_DEST': 'uploads/techrider'
 }
