--- a/settings.py.example
+++ b/settings.py.example
@@ -7,5 +7,6 @@ SETTINGS = {
     'MAIL_PASSWORD': '',
     'UPLOADED_TRACKPOOL_DEST': 'uploads/tracks',
     'UPLOADED_IMAGEPOOL_DEST': 'uploads/images',
-    'UPLOADED_TECHRIDERPOOL_DEST': 'uploads/techrider'
+    'UPLOADED_TECHRIDERPOOL_DEST': 'uploads/techrider',
+    'CELERY_BROKER_URL' : 'sqla+sqlite:///celerydb.db'
 }
