--- a/client/bower.json
+++ b/client/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "slick.js": "~1.3.15"
+    "slick.js": "~1.3.15",
+    "velocity": "~1.1.0"
   }
 }
