--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -3,7 +3,7 @@
     "browser": true,
     "esnext": true,
     "bitwise": true,
-    "camelcase": true,
+    "camelcase": false,
     "curly": true,
     "eqeqeq": true,
     "immed": true,
@@ -19,8 +19,6 @@
     "trailing": true,
     "smarttabs": true,
     "globals": {
-        "jQuery": true,
-        "Ractive": true,
-        "Router": true
+        "jQuery": true
     }
 }
