--- a/settings.py.example
+++ b/settings.py.example
@@ -8,5 +8,6 @@ SETTINGS = {
     'UPLOADED_TRACKPOOL_DEST': 'uploads/tracks',
     'UPLOADED_IMAGEPOOL_DEST': 'uploads/images',
     'UPLOADED_TECHRIDERPOOL_DEST': 'uploads/techrider',
-    'CELERY_BROKER_URL' : 'sqla+sqlite:///celerydb.db'
+    'CELERY_BROKER_URL' : 'sqla+sqlite:///celerydb.db',
+    'BAND_CANDIDATURE_END': '2015-03-01 23:59:59'
 }
