--- a/settings.py.example
+++ b/settings.py.example
@@ -9,5 +9,6 @@ SETTINGS = {
     'UPLOADED_IMAGEPOOL_DEST': 'uploads/images',
     'UPLOADED_TECHRIDERPOOL_DEST': 'uploads/techrider',
     'CELERY_BROKER_URL' : 'sqla+sqlite:///celerydb.db',
-    'BAND_CANDIDATURE_END': '2015-03-01 23:59:59'
+    'BAND_CANDIDATURE_END': '2015-03-01 23:59:59',
+    'IMAGES_PATH': ['uploads/images'],
 }
