--- a/client/bower.json
+++ b/client/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "slick.js": "~1.3.15",
-    "velocity": "~1.1.0"
+    "velocity": "~1.1.0",
+    "ember": "~1.9.1"
   }
 }
