--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 client/bower_components/
 client/node_modules
 client/app
+client/src/css/*.css
+client/src/css/*.css.map
 client/src/js/vendor/
 **/*.db
 **/*.pyc
