--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 client/bower_components/
 client/node_modules
 client/app
-client/src/css/*.css
-client/src/css/*.css.map
-client/src/js/vendor/
+client/_tmp/
 **/*.db
 **/*.pyc
 /settings.py
