--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/dennisausbremen/tunefish",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.0.0",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-bowercopy": "^1.1.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -32,11 +32,20 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
     "grunt-sass": "^0.16.1",
-    "grunt-svgmin": "^1.0.0",
-    "grunt-usemin": "^2.4.0",
+    "jit-grunt": "^0.9.0",
+    "load-grunt-config": "^0.16.0",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^1.0.0"
+  },
+  "dirs": {
+    "src": "src",
+    "dist": "app",
+    "tmp": ".tmp",
+    "css": "css",
+    "scss": "scss",
+    "js": "js",
+    "img": "img",
+    "views": "views"
   }
 }
