--- a/client/bower.json
+++ b/client/bower.json
@@ -22,6 +22,7 @@
     "jquery": "~2.1.1",
     "slick.js": "~1.3.15",
     "velocity": "~1.1.0",
-    "ember": "~1.9.1"
+    "ember": "~1.9.1",
+    "unveil": "~1.3.0"
   }
 }
