--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,11 @@
     "slick.js": "~1.3.15",
     "velocity": "~1.1.0",
     "ember": "~1.9.1",
-    "unveil": "~1.3.0"
+    "unveil": "~1.3.0",
+    "ember-data": "~1.0.0-beta.14.1"
+  },
+  "resolutions": {
+    "handlebars": ">= 2.0.0 < 3.0.0",
+    "ember": "~1.9.1"
   }
 }
