--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,6 @@
     "slick.js": "~1.3.15",
     "velocity": "~1.1.0",
     "ember": "~1.9.1",
-    "unveil": "~1.3.0"
+    "mixitup2": "~2.1.7"
   }
 }
