--- a/client/bower.json
+++ b/client/bower.json
@@ -24,7 +24,8 @@
     "velocity": "~1.1.0",
     "ember": "~1.9.1",
     "mixitup2": "~2.1.7",
-    "ember-data": "~1.0.0-beta.14.1"
+    "ember-data": "~1.0.0-beta.14.1",
+    "Chart.js": "~1.0.2"
   },
   "resolutions": {
     "handlebars": ">= 2.0.0 < 3.0.0",
