Closing voting at 16:00

--- a/settings.py.example
+++ b/settings.py.example
@@ -10,5 +10,6 @@ SETTINGS = {
     'UPLOADED_TECHRIDERPOOL_DEST': 'uploads/techrider',
     'CELERY_BROKER_URL' : 'sqla+sqlite:///celerydb.db',
     'BAND_CANDIDATURE_END': '2015-03-01 23:59:59',
+    'VOTING_END': '2015-04-01 16:00:00',
     'IMAGES_PATH': ['../uploads/images'],
 }
