There is a new entry in the settings.py ... please update yours

--- a/settings.py.example
+++ b/settings.py.example
@@ -12,4 +12,5 @@ SETTINGS = {
     'BAND_CANDIDATURE_END': '2015-03-01 23:59:59',
     'VOTING_END': '2015-04-01 16:00:00',
     'IMAGES_PATH': ['../uploads/images'],
+    'JWT_AUTH_URL_RULE': '/vote/api/v2/auth'
 }
